attempted to fix error with rendering messages page

--- a/views/messages.ejs
+++ b/views/messages.ejs
@@ -8,8 +8,8 @@
     <body>
         <div>
             <p>Message: <%= message.text %></p>
-            <p>Written by: <%= message.user %></p>
-            <p>Submitted: <%= message.added %></p>
+            <p>Written By: <%= message.user %></p>
+            <p>Date: <%= message.added %></p>
             <p><a href="/">Home</a></p>
         </div>
     </body>
