--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,11 +8,10 @@
     <body>
         <div>
             <% messages.forEach((message) => { %>
-                <p><%= message.text %></p>
-                <p><%= message.user %></p>
-                <p><%= message.added %></p>
+                <p>Message: <%= message.text %></p>
+                <p>Written By: <%= message.user %></p>
+                <p>Date: <%= message.added %></p>
             <% }); %>
-            <p><a href="/messages/<% messages.id %>">Open new messages</a></p>
             <p><a href="/new">Add a new message</a></p>
         <div>
     </body>
